page/css/homenav.css
.second-nav{
	padding-left: 10px;
	width: 99%;
	height: 50px;
	margin-top: -20px;
	vertical-align: middle;
}
.nav-container{
	width: 20%;
	height: 50px;
	float: left;
}
.nav-block{
	display: inline-block;
	width: 100%;
	height: 100%;
	color: white;
	text-align: center;
	cursor: pointer;
	position: relative;
	background-color: #7bb7fa;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}
.nav-block h3{
	margin-top: 10px;
}
.nav-block:hover,.nav-block.active{
	left: -5px;
	height: 110%;
	width: 105%;
	z-index: 10000;
}

.nav-b1{
	background-color: #fdc162;
}
.nav-b1:hover,.nav-b1.active{
	background-color: #EDA22F;
}
.nav-b2{
	background-color: #B5E07B;
}
.nav-b2:hover,.nav-b2.active{
	background-color: #93C750;
}
.nav-b3{
	background-color: #7FC6E4;
}
.nav-b3:hover,.nav-b3.active{
	background-color: #64B5DA;
}
.nav-b4{
	background-color: #62C5B3;
}
.nav-b4:hover,.nav-b4.active{
	background-color: #4EB9A7;
}
.nav-b5{
	background-color: #8C8C8C;
}
.nav-b5:hover,.nav-b5.active{
	background-color: #686868;
}

